pullrequest/pipeline/templates/temp/hello-world-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: el-hello-world
  namespace: telefonica
spec:
  host: el-hello-world-telefonica.apps.cluster-8cpc2.dynamic.redhatworkshops.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-hello-world
    weight: 100
  wildcardPolicy: None
